sticky footer & little ui change

--- a/index.html
+++ b/index.html
@@ -17,4 +17,6 @@ layout: default
   {% endfor %}
 </div>
 
-<a href="/blog">More Articles</a>
+<div class="text-center padding-y">
+    <a href="/blog">~ More Articles ~</a>
+</div>
