demo - coin one update

--- a/demo/coinone/index.html
+++ b/demo/coinone/index.html
@@ -15,7 +15,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="format-detection" content="email=no">
     <!-- local dev style in js-->
-    <!--<link rel="stylesheet" href="./dist/app.css">-->
+    <link rel="stylesheet" href="./dist/app.css">
 </head>
 <body>
 <div id="App"></div>
