demo - lebbs & coinone

--- a/demo/lebbs/index.html
+++ b/demo/lebbs/index.html
@@ -14,12 +14,13 @@
     <meta name="apple-mobile-web-app-title" content="">
     <meta name="format-detection" content="telephone=no">
     <meta name="format-detection" content="email=no">
-    <!-- local dev style in js-->
     <link rel="stylesheet" href="./dist/app.css">
 </head>
 <body>
 <div id="App"></div>
-<!-- local dev-->
+<script>
+    window.svgUrl = './dist/svg-symbols.svg';
+</script>
 <script src="./dist/lib.js"></script>
 <script src="./dist/app.dev.js"></script>
 </body>
